--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "d3-ease": "^1.0.3",
+    "dotenv": "^8.2.0",
+    "firebase": "^7.8.0",
     "node-pre-gyp": "^0.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
