login_page : fetching data from database and private admin/edit_matches route created

--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-BROWSER=none
+FIREBASE_API_KEY = AIzaSyCSl374q0SCGeHoxSno69wst6RRXL0C78g
+FIREBASE_MESSAGING_SENDER_ID = 122816401681
+FIREBASE_APP_ID = 1:122816401681:web:54b71df33cfa5b44efbcb0
