--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "core-js": "^3.6.4",
     "d3-ease": "^1.0.3",
     "dotenv": "^8.2.0",
     "firebase": "^7.8.0",
