--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.12.17",
     "@material-ui/core": "^1.5.1",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,13 +15,18 @@
     "firebase": "^7.8.0",
     "node-pre-gyp": "^0.14.0",
     "node-sass": "^4.13.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "pure-react-carousel": "^1.25.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-fa": "^5.0.0",
     "react-firebase-file-uploader": "^2.4.1",
     "react-move": "^2.9.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.3.1"
+    "react-scripts": "3.3.1",
+    "react-video-cover": "^1.2.2",
+    "redux": "^4.0.5",
+    "video-react": "^0.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
