--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.4",
     "d3-ease": "^1.0.3",
     "dotenv": "^8.2.0",
-    "firebase": "^7.8.0",
+    "firebase": "^7.13.2",
     "node-pre-gyp": "^0.14.0",
     "node-sass": "^4.13.1",
     "pure-react-carousel": "^1.25.2",
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.0",
     "react-fa": "^5.0.0",
     "react-firebase-file-uploader": "^2.4.1",
+    "react-icons": "^3.9.0",
     "react-move": "^2.9.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
@@ -27,6 +28,8 @@
     "react-video-cover": "^1.2.2",
     "react-youtube": "^7.9.0",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.0",
+    "tools": "0.0.0",
     "video-react": "^0.14.1"
   },
   "scripts": {
